# remote_video_recorder

./: .gitignore  CMakeLists.txt  package.xml  setup.py
src/: remote_video_recorder.cpp
src/remote_video_recorder/: __init__.py  logger_frame.py
srv/: RemoteRecord.srv
